// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection Form component Render 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render icon 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded has-icons-left"><span class="select is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span> <span class="icon is-left"><i class="fa fa-user"></i></span></div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Selection Form component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Selection Form component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">The label</label> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render mode readonly by config 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render mode readonly conditional param 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render mode readonly param 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render placeholder 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><option selected="selected" disabled="disabled" hidden="hidden">
                The placeholder
            </option> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render required 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-info is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render required conditionnal 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-info is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render required without value 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-danger is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<p class="help is-danger">this field is required</p>
</div>
</span>
`;

exports[`Selection Form component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render without data 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> <option value="new">
                        New
                    </option></select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render without selections RO 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> </select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Form component Render without selections RW 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-expanded"><span class="select is-fullwidth"><select><!----> </select></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Selection Thumbnail component Render 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Thumbnail component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Thumbnail component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Selection Thumbnail component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Selection Thumbnail component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Thumbnail component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">The label</label> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Thumbnail component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium"><div class="field" style="width:inherit;"><!----> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Thumbnail component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span> New </span>
<!---->
</div>
</span>
`;

exports[`Selection Thumbnail component Render without data 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span>  ---  </span>
<!---->
</div>
</span>
`;

exports[`Selection Thumbnail component Render without selection 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span>  ---  </span>
<!---->
</div>
</span>
`;

exports[`Selection list component Render invisible condition is false 1`] = `<span data-server-rendered="true">New</span>`;

exports[`Selection list component Render invisible condition is true 1`] = `<span data-server-rendered="true"></span>`;

exports[`Selection list component Render invisible is True 1`] = `<span data-server-rendered="true"></span>`;

exports[`Selection list component Render invisible is false 1`] = `<span data-server-rendered="true">New</span>`;

exports[`Selection list component Render with data 1`] = `<span data-server-rendered="true">New</span>`;

exports[`Selection list component Render without data 1`] = `<span data-server-rendered="true"> --- </span>`;

exports[`Selection list component Render without selections 1`] = `<span data-server-rendered="true"> --- </span>`;
